Release 17.01.0 (pending)
==========================

- Added resource location API and image update API
- configure LML clock phases based on interface freq
- LimeSDR: detect reference clock presence on connect
- Set CMIX setting in calib/tune based on chip version

Release 16.12.1 (pending)
==========================

- Minor compilation fixes for OSX/clang (narrowing)
- Improve cmake check for novena connection i2c support
- Fix abs() overload for mcu lms7002m calibrations

Release 16.12.0 (2016-12-31)
==========================

This is the first changelog entry for LimeSuite