@@ -1,6 +1,7 @@
 Release 17.01.0 (pending)
 ==========================
 
+- Support filter by serial for ConnectionSTREAM
 - Added resource location API and image update API
 - configure LML clock phases based on interface freq
 - LimeSDR: detect reference clock presence on connect
